fixed mobile margin bottom spacing for header

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
     /* Fonts */
-@import url('https://fonts.googleapis.com/css?family=Niramit:500,600,700');
     
+    @import url('https://fonts.googleapis.com/css?family=Niramit:500,600,700');
     @import url("https://use.typekit.net/vhq2vux.css");
     /* Global Style */
     
@@ -637,10 +637,16 @@
     
     .headercat-title {
         font-family: 'din-condensed', sans-serif;
-        margin-top: 40px !important;
+        margin-top: 40px;
         text-transform: uppercase;
         font-size: 16px;
         color: #333333;
+    }
+    
+    @media only screen and (max-width: 570px) {
+        .headercat-title {
+            margin-top: 0 !important;
+        }
     }
     
     .rightmenu {
@@ -752,8 +758,6 @@
         transition: all 0.3s;
     }
     
-    
-    
     .blog-post .post-info {
         font-size: 14px;
         font-weight: 500;
@@ -801,7 +805,7 @@
         left: 0px;
         top: 15px;
         background-color: rgba(112, 33, 255, 0.8);
-        border-radius: 0px 0px 6px 0px; 
+        border-radius: 0px 0px 6px 0px;
         padding: 10px 8px;
         text-align: center;
     }
@@ -1462,9 +1466,6 @@
             text-align: left;
         }
     }
-
-
-
     /******************************************* Social Icons ****************************************/
     
     .social-icon {
@@ -1695,7 +1696,6 @@
             line-height: 32px;
             font-weight: 900;
         }
-        
         .blog-post .post-info {
             font-size: 13px;
             line-height: 29px;
@@ -2649,49 +2649,46 @@
         width: 100%;
         border-top: 1px solid #dedede;
     }
-
-
     /* HOME HEADER IMAGE
 --------------------------------*/
-#home-header {
-    position: relative;
-    background-color: #FFFFFF;
-    width: 100%;
-    text-align: center;
-    display: table;
-}
-
-#home-header .post-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-#home-header .overlay {
-    background-image: linear-gradient(to bottom, rgba(251, 252, 253, 0.7) 0, #fafafa 100%);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    -moz-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
-
-#home-header .post-content {
-    position: relative;
-    z-index: 500;
-}
-
-
+    
+    #home-header {
+        position: relative;
+        background-color: #FFFFFF;
+        width: 100%;
+        text-align: center;
+        display: table;
+    }
+    
+    #home-header .post-background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
+    #home-header .overlay {
+        background-image: linear-gradient(to bottom, rgba(251, 252, 253, 0.7) 0, #fafafa 100%);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        -webkit-transition: all 0.3s ease-in-out;
+        -ms-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+    }
+    
+    #home-header .post-content {
+        position: relative;
+        z-index: 500;
+    }
     /*
     #home-header {
         background: linear-gradient(rgba(251, 252, 253, 0.7), #fafafa), url(../images/call-to-action-bg.jpg) center center;
@@ -2713,13 +2710,13 @@
         font-weight: 700 !important;
         padding-bottom: 20px;
     }
-
+    
     #home-header .home-header-container-category {
         width: 60% !important;
         margin: 0 auto !important;
         padding: 100px 0px 60px 0px !important;
     }
-
+    
     #home-header h1.category-page a {
         font-family: 'Niramit', sans-serif;
         color: #333;
@@ -2728,23 +2725,23 @@
         font-weight: 700 !important;
         padding-bottom: 20px;
     }
-
-#home-header h1.category-page a:hover {
-    color: #7021FF;
-    -webkit-transition: all 0.05s;
-    -moz-transition: all 0.05s;
-    transition: all 0.05s;
-}
+    
+    #home-header h1.category-page a:hover {
+        color: #7021FF;
+        -webkit-transition: all 0.05s;
+        -moz-transition: all 0.05s;
+        transition: all 0.05s;
+    }
     
     #home-header p {
         color: #333;
     }
-
-#home-header p.category-date {
-    font-size: 10px;
-    font-weight: 300;
-    color: #8c8c8c;
-}
+    
+    #home-header p.category-date {
+        font-size: 10px;
+        font-weight: 300;
+        color: #8c8c8c;
+    }
     
     #home-header .cta-btn {
         font-family: 'proxima-nova', sans-serif;
@@ -2764,28 +2761,28 @@
         background: #7021FF;
         color: #fff;
     }
-
-@media only screen and (max-width: 992px) {
-    #home-header h1 {
+    
+    @media only screen and (max-width: 992px) {
+        #home-header h1 {
             font-size: 35px !important;
             line-height: 42px;
             padding-bottom: 20px;
         }
-    #home-header h1.category-page {
+        #home-header h1.category-page {
             font-size: 35px !important;
             line-height: 42px;
             padding-bottom: 20px;
         }
-}
-
-@media only screen and (max-width: 740px) {
-    #home-header .home-header-container {
+    }
+    
+    @media only screen and (max-width: 740px) {
+        #home-header .home-header-container {
             width: 70% !important;
+        }
+        #home-header .home-header-container-category {
+            width: 70% !important;
+        }
     }
-     #home-header .home-header-container-category {
-        width: 70% !important;
-    }
-}
     
     @media only screen and (max-width: 570px) {
         #home-header {
@@ -2815,23 +2812,21 @@
             padding-bottom: 5px;
         }
     }
-
-
-@media only screen and (max-width: 375px) {
-    #home-header .home-header-container {
-            width: 80% !important;
-    }
-    #home-header .home-header-container-category {
-            width: 80% !important;
-    }
     
-     #home-header h1 {
-        font-size: 23px !important;
+    @media only screen and (max-width: 375px) {
+        #home-header .home-header-container {
+            width: 80% !important;
+        }
+        #home-header .home-header-container-category {
+            width: 80% !important;
+        }
+        #home-header h1 {
+            font-size: 23px !important;
+        }
+        #home-header h1.category-page {
+            font-size: 23px !important;
+        }
     }
-    #home-header h1.category-page {
-        font-size: 23px !important;
-    }
-}
     /*****************************************************
 *** Main Nav ***
 *****************************************************/
@@ -2884,13 +2879,13 @@
     }
     
     .nav-center ul.left {
-    font-family: 'proxima-nova';
-    font-weight: 600 !important;
-    letter-spacing: 0.1px;
-    text-align: left;
-    margin: auto;
-    width: 72%;
-}
+        font-family: 'proxima-nova';
+        font-weight: 600 !important;
+        letter-spacing: 0.1px;
+        text-align: left;
+        margin: auto;
+        width: 72%;
+    }
     /*
     
     #main-nav ul.left li {
@@ -2935,15 +2930,12 @@
             padding-top: 2px;
             width: 150px !important;
         }
-        
         .logo2 img {
-        width: 150px !important;
-    }
-        
+            width: 150px !important;
+        }
         #main-nav .logo1 {
             padding-bottom: 0px !important;
         }
-        
         #main-nav {
             padding: 2px 0px;
         }
